[package]
name = "floresta-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uniffi = { version = "0.26.1", features = ["build", "cli"] }
florestad = { git = "https://github.com/vinteumorg/floresta", rev = "960778caa8ddb2461f0d2834a4ae4c39a0c895f5", features = [ "experimental-p2p", "json-rpc", "compact-filters", "experimental-db"]}
bitcoin = "0.31"
rustreexo = "0.4.0"
tokio = "1.41.0"

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build", "cli"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]
name = "florestad_ffi"

[dev-dependencies]
uniffi = { version = "0.26.1", features = ["build", "cli"] }

